--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,14 +8,14 @@ services:
     container_name: gpt4free-ts
     image: gpt4free-ts:latest
     ports:
-      - "13000:3000"
+      - "6969:3000"
     restart: always
     volumes:
       - ./run:/usr/src/app/run
-    cap_add:
-      - "SYS_ADMIN"
-    environment:
+    # cap_add:
+      # - "SYS_ADMIN"
+    # environment:
       #      - TZ=Asia/Shanghai
-      - http_proxy=${http_proxy}
-      - https_proxy=${http_proxy}
-      - rapid_api_key=${rapid_api_key}
+      # - http_proxy=${http_proxy}
+      # - https_proxy=${http_proxy}
+      # - rapid_api_key=${rapid_api_key}
